@startuml
class Player {
    -Set<YathzeeDice> dices
    -PlayerScore score
    --
    +void rollBoardDices()
    +void keepDice(int index)
    +void replayDice(int index)
    +Map<int, bool> displayDices()
    +int displayTotal()
    ==
    dices.size() == 5
}

class PlayerScore {
    -Map<Rule, Integer> scores
    +void save(String ruleName, Set<Dice> dices)
    +Map<Rule, Integer> preview(Set<Dice> dices)
    +Integer getSumBonus()
    +Integer getTotal()
}

class Rule {
    -String name
    +Integer evaluate(Set<Dice> dices)
}

class YathzeeDice {
    -bool kept
    -int index
    +void keep()
    +void replay()
}

class Dice {
    -Integer value
    --
    +void roll()
    +Integer getValue()
    ==
    1 <= value <= 6
}

class Game

Player *-- YathzeeDice
Player *-- PlayerScore
PlayerScore *-- Rule
YathzeeDice --|> Dice

@enduml